# fit-track

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml
core/: api.py  config.py  graphs.py  recommendations.py  utils.py
handlers/: __init__.py  food.py  progress.py  start.py  user.py  water.py  workout.py
states/: forms.py
storage/: user.py
